Bug 417914 - No backup made if Number of Backup Files Kept =2
Summary: No backup made if Number of Backup Files Kept =2
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-20 10:41 UTC by Ahab Greybeard
Modified: 2020-02-24 09:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ahab Greybeard 2020-02-20 10:41:25 UTC
SUMMARY
This happens on the 4.2.8 appimage and the Feb 18th 4.3.0 prealpha git 9643b51

STEPS TO REPRODUCE
1. Set the Number Of Backup Files Kept to be 2
2. Save a document
3. Note that the backup is not made

OBSERVED RESULT
As noted above.
If the number = 1,3,4,5,6 then backups are made properly.
I haven't tested higher numbers.

EXPECTED RESULT
A backup should be made

SOFTWARE/OS VERSIONS
Krita

 Version: 4.3.0-prealpha (git 9643b51)
 Languages: en_GB, en, en, en_GB, en
 Hidpi: true

Qt

  Version (compiled): 5.12.5
  Version (loaded): 5.12.5

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 4.19.0-6-amd64
  Pretty Productname: Debian GNU/Linux 10 (buster)
  Product Type: debian
  Product Version: 10

OpenGL Info
 
  Vendor:  "NVIDIA Corporation" 
  Renderer:  "GeForce GTX 750 Ti/PCIe/SSE2" 
  Version:  "4.6.0 NVIDIA 418.74" 
  Shading language:  "4.60 NVIDIA" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
     Version: 4.6
     Supports deprecated functions true 
     is OpenGL ES: false 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false 

Hardware Information

  GPU Acceleration: auto
  Memory: 16039 Mb
  Number of Cores: 8
  Swap Location: /tmp

Current Settings

  Current Swap Location: /tmp
  Undo Enabled: 1
  Undo Stack Limit: 30
  Use OpenGL: 1
  Use OpenGL Texture Buffer: 1
  Use AMD Vectorization Workaround: 0
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 960
  Use Backup Files: 1
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Use Win8 Pointer Input: 0
  Use RightMiddleTabletButton Workaround: 0
  Levels of Detail Enabled: 0
  Use Zip64: 0


Display Information
Number of screens: 2
	Screen: 0
		Name: DVI-D-1
		Depth: 24
		Scale: 1
		Resolution in pixels: 1280x1024
		Manufacturer: Dell Inc.
		Model: DELL 1704FPV-
		Refresh Rate: 60
	Screen: 1
		Name: DVI-D-0
		Depth: 24
		Scale: 1
		Resolution in pixels: 1280x1024
		Manufacturer: Dell Inc.
		Model: DELL 1704FPV-
		Refresh Rate: 60
Comment 1 Halla Rempt 2020-02-20 10:50:52 UTC
Git commit 1f231fca4474528982f1000104dc90a95da6125d by Boudewijn Rempt.
Committed on 20/02/2020 at 10:50.
Pushed by rempt into branch 'master'.

Correct logic for determining whether there are multiple backups requested

M  +1    -1    libs/ui/KisDocument.cpp

https://invent.kde.org/kde/krita/commit/1f231fca4474528982f1000104dc90a95da6125d
Comment 2 Halla Rempt 2020-02-24 09:20:20 UTC
Git commit 1d73a2a3c587abd04b6b91db2193a0d29d5da8d8 by Boudewijn Rempt.
Committed on 24/02/2020 at 09:20.
Pushed by rempt into branch 'krita/4.2'.

Correct logic for determining whether there are multiple backups requested
(cherry picked from commit 1f231fca4474528982f1000104dc90a95da6125d)

M  +1    -1    libs/ui/KisDocument.cpp

https://invent.kde.org/kde/krita/commit/1d73a2a3c587abd04b6b91db2193a0d29d5da8d8