Correct logic for determining whether there are multiple backups requested

BUG:417914